<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#a10c478d">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_opcoes_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/opcoes_titulo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" >

        <Button
            android:id="@+id/btn_cadastrar_lancamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/opcoes_listarContas"
            android:textColor="#FFF"
            android:onClick="listarContas"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSenhas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/btn_password"
            android:textColor="#FFF"
            android:onClick="abrirTelaSenha"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/btnExportar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/btn_export_csv"
            android:textColor="#FFF"
            android:onClick="exportEmailInCSV"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/btnBackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/btn_backup_restore"
            android:textColor="#FFF"
            android:onClick="abrirTelaBackup"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>