<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a10c478d"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_type_paswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txt_type_paswd"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_login_active"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#FFF"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/padlock"
            android:text="@string/btn_login"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_sendmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="enviarEmail"
            android:text="@string/btn_forgot_pass"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>